Add new codes in HTML, JS

--- a/index.html
+++ b/index.html
@@ -5,19 +5,60 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <meta name="description" content="Breve descrição do projeto">
-        <meta name="author" content="Seu nome">
+        <meta name="description" content="Apresentação do meu perfil profissional">
+        <meta name="author" content="Guilherme Eduardo">
+        <link rel="shortcut icon" href="./assets/images/logo.png" type="image/x-icon">
 
         <!-- Styles CSS -->
         <link rel="stylesheet" href="./assets/styles/style.css">
 
         <!-- Scripts JS -->
         <script src="./scripts/main.js" defer></script>
+        <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js" defer></script>
+        <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js" defer></script>
 
-        <title>Título do Projeto</title>
+        <title>GE | Guilherme Eduardo</title>
     </head>
 
     <body>
-        
+        <header>
+            <div class="box-img-header">
+                <img src="./assets/images/logo.png" alt="Logo do Perfil GE" title="Logo do Perfil GE">
+            </div>
+
+            <nav>
+                <a href="#experiences">Experiências</a>
+                <a href="#">Quem Sou Eu</a>
+                <a href="#">Projetos</a>
+                <a href="#">Contato</a>
+            </nav>
+
+            <div class="boc-btn-actions">
+                <button class="btn-action" id="btn-github">
+                    <ion-icon name="logo-github"></ion-icon>
+                    GitHub
+                </button>
+                <button class="btn-action" id="btn-linkedin">
+                    <ion-icon name="logo-linkedin"></ion-icon>
+                    LinkedIn
+                </button>
+            </div>
+        </header>
+
+        <main>
+            <section class="first-section">
+
+            </section>
+
+            <section class="second-section" id="experiences">
+
+            </section>
+
+            <section id="about-me" class="third-section"></section>
+
+            <section id="my-projects" class="fourth-section"></section>
+        </main>
+
+        <footer></footer>
     </body>
 </html>
