Estilização do Header

--- a/index.html
+++ b/index.html
@@ -31,24 +31,22 @@
     <body>
         <header>
             <div class="box-img-header">
-                <img src="./assets/images/logo.png" alt="Logo do Perfil GE" title="Logo do Perfil GE">
+                <img class="img-logo" src="./assets/images/logo.png" alt="Logo do Perfil GE" title="Logo do Perfil GE">
             </div>
 
             <nav>
-                <a href="#experiences">Experiências</a>
-                <a href="#">Quem Sou Eu</a>
-                <a href="#">Projetos</a>
-                <a href="#">Contato</a>
+                <a href="#experiences" class="nav-links">Experiências</a>
+                <a href="#about-me" class="nav-links">Quem Sou Eu</a>
+                <a href="#my-projects" class="nav-links">Projetos</a>
+                <a href="#contact" class="nav-links">Contato</a>
             </nav>
 
-            <div class="boc-btn-actions">
+            <div class="box-btn-actions">
                 <button class="btn-action" id="btn-github">
-                    <ion-icon name="logo-github"></ion-icon>
-                    GitHub
+                    <ion-icon name="logo-github"></ion-icon>&nbsp;GitHub
                 </button>
                 <button class="btn-action" id="btn-linkedin">
-                    <ion-icon name="logo-linkedin"></ion-icon>
-                    LinkedIn
+                    Linked<ion-icon name="logo-linkedin"></ion-icon>
                 </button>
             </div>
         </header>
