Finalização do CSS e início do JS

--- a/index.html
+++ b/index.html
@@ -55,13 +55,12 @@
             <section class="first-section">
                 <div>
                     <h1>
-                        Saudação! Eu sou o <br> <strong>Guilherme Eduardo</strong>. <br> Seja bem-vindo ao meu perfil
+                        Oi! Me chamo <br> <strong>Guilherme Eduardo</strong>. <br> Seja bem-vindo ao meu perfil!
                     </h1>
 
                     <p>
-                        Tenho 25 anos, estudo para ser um <strong>Desenvolvedor Front-End</strong>, utilizando de tecnologias como <strong>HTML</strong>, <strong>CSS</strong>, <strong>Javascript</strong>, <strong>ReactJS</strong> e <strong>SaaS</strong>
+                        Tenho 25 anos, estudante de <strong>Desenvolvimento Front-End</strong>.
                     </p>
-                    <a href="#contact">Entrar em Contato</a>
                 </div>
 
                 <div class="box-img-main">
@@ -82,19 +81,19 @@
                         </li>
                             
                         <li>
-                            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" width="50"/>
+                            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg"/>
                         </li>
                         <li>
-                            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original-wordmark.svg" width="50"/>
+                            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original-wordmark.svg"/>
                         </li>
                         <li>
-                            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/postgresql/postgresql-original-wordmark.svg" width="50"/>
+                            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/postgresql/postgresql-original-wordmark.svg"/>
                         </li>
                         <li>
-                            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" width="50"/>
+                            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg"/>
                         </li>
                         <li>
-                            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/sass/sass-original.svg" width="50"/>
+                            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/sass/sass-original.svg"/>
                         </li>
                     </ul>
                 </div>
