--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
             <nav>
                 <a href="#experiences" class="nav-links">Experiências</a>
-                <a href="#about-me" class="nav-links">Quem Sou Eu</a>
+                <a href="#about-me" class="nav-links">Sobre Mim</a>
                 <a href="#my-projects" class="nav-links">Projetos</a>
                 <a href="#contact" class="nav-links">Contato</a>
             </nav>
@@ -100,10 +100,10 @@
             </section>
 
             <section id="about-me" class="third-section">
-                <h2 class="title">Quem Sou Eu</h2>
+                <h2 class="title">Sobre Mim</h2>
                 <div>
                     <img class="img-about-me" src="./assets/images/img_2.jpg" alt="Foto alternativa Guilherme Eduardo">
-                    <p>Sou formado em <strong>Sistemas de Informação</strong>. Meu início de carreira no mundo da tecnologia foi com <strong>HelpDesk</strong>, futuramente vindo ser chamado para trabalhar em uma empresa como Desenvolvedor Java. Sou brasileiro, mas atualmente resido em Portugal.</p>
+                    <p>Sou formado em <strong>Sistemas de Informação</strong>. Meu início de carreira no mundo da tecnologia foi como <strong>HelpDesk</strong>, futuramente vindo ser chamado para trabalhar em uma empresa como Desenvolvedor Java. Sou brasileiro, mas atualmente resido em Portugal.</p>
                 </div>
             </section>
 
